@@ -1,8 +1,11 @@
 plugins {
+    id 'application'
     id 'java'
 }
 
 sourceCompatibility = 1.19
+
+mainClassName = 'com.github.nikammerlaan.aoc.Main'
 
 repositories {
     mavenCentral()
@@ -23,6 +26,10 @@ test {
 
 tasks.withType(JavaCompile) {
     options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
 }
 
 tasks.withType(Test) {
